[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "powersys"
version = "0.5.4"
authors = [
  { name="Eduardo Montilva", email="edumntg@gmail.com" },
]
description = "Python package for Power System Analysis, Optimization and Dynamics"
readme = "README.md"
requires-python = ">=3.11.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/edumntg/powersys"
"Bug Tracker" = "https://github.com/edumntg/powersys/issues"